objects/sharinpix__EinsteinVisionProject__c.object
<CustomObject>
    <description>Object containing SharinPix Einstein Vision Projects.</description>
    <fields>
        <fullName>sharinpix__Description__c</fullName>
        <description>Einstein Vision Project description.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sharinpix__EinsteinLabelSet__c</fullName>
        <label>Einstein Label Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharinpix__TagSet__c</fullName>
        <label>Tag Set (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Einstein Vision Project</label>
    <listViews>
        <fullName>sharinpix__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>sharinpix__ImageClassification</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sharinpix__EinsteinVisionProject__c.sharinpix__ImageClassification</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Image Classification</label>
    </listViews>
    <listViews>
        <fullName>sharinpix__ObjectDetection</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>sharinpix__EinsteinVisionProject__c.sharinpix__ObjectDetection</value>
        </filters>
        <label>Object Detection</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Vision Projects</pluralLabel>
    <recordTypes>
        <fullName>sharinpix__ImageClassification</fullName>
        <active>true</active>
        <label>Image Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>sharinpix__ObjectDetection</fullName>
        <active>true</active>
        <label>Object Detection</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>